Trying to fix the footer appearing in the middle of the screen on mobile by wrapping the entire app and then have the footer lay on the outside. A common technique that I used in my website before that I forgot to put.

--- a/src/styling/keyboard.scss
+++ b/src/styling/keyboard.scss
@@ -3,6 +3,7 @@
 .keyboard__title {
   h1 {
     font-size: 2rem;
+    color: $pink;
   }
 }
 
