--- a/src/styling/variables.scss
+++ b/src/styling/variables.scss
@@ -2,6 +2,7 @@
 $white: #fff;
 $black: #000;
 $dark-blue: #023440;
+$pink: #fdcbbf;
 
 // Sizing
 $border-radius: 0.5rem;
